
    YARN-4243. Add retry on establishing Zookeeper conenction in 
    EmbeddedElectorService#serviceInit. (Xuan Gong via junping_du)

    YARN-2801. Add documentation for node labels feature. (Wangda Tan and Naganarasimha 
    G R  via ozawa)

    YARN-4285. Display resource usage as percentage of queue and cluster in the
    RM UI (Varun Vasudev via wangda)

  OPTIMIZATIONS

  BUG FIXES

    YARN-3305. Normalize AM resource request on app submission. (Rohith Sharmaks
    via jianhe)

    YARN-3269. Yarn.nodemanager.remote-app-log-dir could not be configured to 
    fully qualified path. (Xuan Gong via junping_du)

    YARN-3383. AdminService should use "warn" instead of "info" to log exception 
    when operation fails. (Li Lu via wangda)

    YARN-3425. NPE from RMNodeLabelsManager.serviceStop when 
    NodeLabelsManager.serviceInit failed. (Bibin A Chundatt via wangda)

    YARN-3435. AM container to be allocated Appattempt AM container shown as null.
    (Bibin A Chundatt via xgong)

    YARN-2666. TestFairScheduler.testContinuousScheduling fails Intermittently.
    (Zhihai Xu via ozawa)

    YARN-3110. Few issues in ApplicationHistory web ui. (Naganarasimha G R via xgong)

    YARN-3459. Fix failiure of TestLog4jWarningErrorMetricsAppender.
    (Varun Vasudev via wangda)

    YARN-3266. RMContext#inactiveNodes should have NodeId as map key.
    (Chengbing Liu via jianhe)

    YARN-3136. Fixed a synchronization problem of
    AbstractYarnScheduler#getTransferredContainers. (Sunil G via jianhe)

    YARN-3387. Previous AM's container completed status couldn't pass to current
    AM if AM and RM restarted during the same time. (sandflee via jianhe)

    YARN-3530. ATS throws exception on trying to filter results without otherinfo.
    (zhijie shen via xgong)

    YARN-2740. Fix NodeLabelsManager to properly handle node label modifications 
    when distributed node label configuration enabled. (Naganarasimha G R via wangda)
